test/expected/include-too_many_files.out
include "*"
        ^
9: error: *: too many files
